# markitdown-lab

./: Makefile  README.md  pyproject.toml
src/: main.py
